# rectangles

./: Cargo.toml  README.md
src/: main.rs  rects.slint
