[package]
name = "rects-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.3.2", git = "https://github.com/slint-ui/slint", branch = "master", features = ["backend-linuxkms-noseat", "renderer-skia-opengl"] }

[profile.release]
strip = true
